refactor#3 - display the result in <div>

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 			   
 			   var result = calculate(t,u);
 			   
-			   alert("Temperature is "+t1+" in "+u1);
+			   //alert("Temperature is "+t1+" in "+u1);
+			   $("#result").html("temperature is <b>"result.temp+"</b> in "+result.unit);
 			});
 		});
 	</script>
